--- a/configure.in
+++ b/configure.in
@@ -619,6 +619,7 @@ AC_ARG_WITH(runasclient,
 	)
 AC_SUBST(runasclient)
 AM_CONDITIONAL(SIMIAS_AS_CLIENT, test "$runasclient" = "TRUE")
+AM_CONDITIONAL(MONO24BUILD, test "$CSC" = "gmcs")
 
 #
 # Handle --with-simiasdatadir
