Fix for Ldap synch happens at every apache restart issue.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7192 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/server/Simias.config.in
+++ b/src/server/Simias.config.in
@@ -16,6 +16,7 @@
 	<setting name="Assembly" value="Simias.Server" />
 	<setting name="ServiceAssembly" value="Simias.Server" />
 	<setting name="Class" value="Simias.Server.InternalUser" />
+	<setting name="LdapSyncOnRestart" value="No" />
 	<!--
 	<setting name="Assembly" value="Simias.SimpleServer" />
 	<setting name="Class" value="Simias.SimpleServer.User" />
