Client upgrade on SLED11 from 3.7.2.0 to 3.8.0.0 gives error
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7260 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/server/Simias.ClientUpdate/unix-version.config
+++ b/src/server/Simias.ClientUpdate/unix-version.config
@@ -50,12 +50,12 @@
 
 	-->
 
-	<distribution match="SUSE Linux Enterprise 10">
+	<distribution match="SUSE Linux Enterprise Desktop 10">
 		<version>3.8.0.0</version>
 		<download-directory>suse-linux-10.0</download-directory>
 	</distribution>
 
-	<distribution match="SUSE Linux Enterprise 11">
+	<distribution match="SUSE Linux Enterprise Desktop 11">
                 <version>3.8.0.0</version>
                 <download-directory>suse-linux-11.0</download-directory>
         </distribution>
